<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.16">
  <DUT Name="ST_Student" Id="{a8e28f9c-a68b-400c-9504-6ec1a5dcd10b}">
    <Declaration><![CDATA[TYPE ST_Student :
STRUCT
	sStudentName : STRING(255);
	nStudentId : INT;
	nStudentAge : INT;
END_STRUCT
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>