<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.16">
  <POU Name="F_InitializeStudentDetails" Id="{b3b575b5-1496-4296-b266-6b9a1af1c33b}" SpecialFunc="None">
    <Declaration><![CDATA[FUNCTION F_InitializeStudentDetails
VAR_INPUT
	stStudent1 : REFERENCE TO ST_Student;
	stName : STRING(255);
	stId : INT;
	stAge :INT;
END_VAR
VAR
END_VAR
]]></Declaration>
    <Implementation>
      <ST><![CDATA[stStudent1.sStudentName := stName;
stStudent1.nStudentAge := stAge;
stStudent1.nStudentId := stId;
]]></ST>
    </Implementation>
    <LineIds Name="F_InitializeStudentDetails">
      <LineId Id="7" Count="0" />
      <LineId Id="12" Count="2" />
    </LineIds>
  </POU>
</TcPlcObject>